
include $(top_srcdir)/Makefile.am.common

noinst_HEADERS = lmap_capture.h \
                 lmap_debug.h \
                 lmap_error.h \
                 lmap_globals.h \
                 lmap.h \
                 lmap_parser.h \
                 lmap_signal.h \
                 lmap_stdint.h \
                 lmap_decode.h \
                 lmap_version.h \
                 lmap_threads.h \
                 neo_options.h
   
EXTRA_DIST = missing/strlcpy.h \
             missing/strlcat.h \
             missing/getopt.h \
             missing/queue.h
