
include $(top_srcdir)/Makefile.am.common

noinst_HEADERS = lmap_capture.h \
                 lmap_debug.h \
                 lmap_error.h \
                 lmap_globals.h \
                 lmap.h \
                 lmap_inet.h \
                 lmap_if.h \
                 lmap_parser.h \
                 lmap_signal.h \
                 lmap_stdint.h \
                 lmap_decode.h \
                 lmap_data.h \
                 lmap_hash.h \
                 lmap_manuf.h \
                 lmap_fingerprint.h \
                 lmap_ui.h \
                 lmap_db.h \
                 lmap_ncurses.h \
                 lmap_ncurses_info.h \
                 lmap_ncurses_menu.h \
                 lmap_version.h \
                 lmap_threads.h \
                 lmap_stat.h 
   
EXTRA_DIST = missing/strlcpy.h \
             missing/strlcat.h \
             missing/getopt.h \
             missing/queue.h

CLEANFILES = *.log *.out core.* *~

# vim:ts=4:expandtab             
